--- a/public/img/icons/manifest.json
+++ b/public/img/icons/manifest.json
@@ -5,8 +5,8 @@
 	"start_url":		"/",
 	"display":			"standalone",
 	"orientation":		"any",
-	"background_color":	"#fff",
-	"theme_color":		"#fff",
+	"background_color":	"rgb(173, 132, 102)",
+	"theme_color":		"rgb(173, 132, 102)",
 	"icons": [
 		{
 			"src": "/android-chrome-36x36.png",
