--- a/public/manifest.json
+++ b/public/manifest.json
@@ -42,7 +42,7 @@
       "type":"image/png",
       "purpose":"maskable"
       }],
-      "start_url":".",
+      "start_url":".index.html",
       "display":"standalone",
       "background_color":"#000000"
 }
