--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,51 +3,51 @@
   "theme_color":"#000",
   "icons":[
     {
-      "src":"./img/icons/android-chrome-192x192.png",
+      "src":"./img/icons/icon-192x192.png",
       "sizes":"192x192","type":"image/png"
     },
     {
-      "src":"./img/icons/apple-touch-icon-60x60.png",
+      "src":"./img/icons/apple-touch-icon-60x60-precomposed.png",
       "sizes":"60x60","type":"image/png"
     },
     {
-      "src":"./img/icons/apple-touch-icon-114x114.png",
+      "src":"./img/icons/apple-touch-icon-114x114-precomposed.png",
       "sizes":"114x114","type":"image/png"
     },
     {
-      "src":"./img/icons/apple-touch-icon-120x120.png",
+      "src":"./img/icons/apple-touch-icon-120x120-precomposed.png",
       "sizes":"120x120","type":"image/png"
     },
     {
-      "src":"./img/icons/apple-touch-icon-152x152.png",
+      "src":"./img/icons/icon-152x152.png",
       "sizes":"152x152","type":"image/png"
     },
     {
-      "src":"./img/icons/apple-touch-icon-180x180.png",
+      "src":"./img/icons/apple-touch-icon-180x180-precomposed.png",
       "sizes":"180x180","type":"image/png"
     },
     {
-      "src":"./img/icons/android-chrome-512x512.png",
+      "src":"./img/icons/icon-512x512.png",
       "sizes":"512x512","type":"image/png"
     },
     {
-      "src":"./img/icons/android-chrome-36x36.png",
+      "src":"./img/icons/icon-36x36.png",
       "sizes":"36x36","type":"image/png"
     },
     {
-      "src":"./img/icons/android-chrome-48x48.png",
+      "src":"./img/icons/icon-48x48.png",
       "sizes":"48x48","type":"image/png"
     },
     {
-      "src":"./img/icons/android-chrome-72x72.png",
+      "src":"./img/icons/icon-72x72.png",
       "sizes":"72x72","type":"image/png"
     },
     {
-      "src":"./img/icons/android-chrome-96x96.png",
+      "src":"./img/icons/icon-96x96.png",
       "sizes":"96x96","type":"image/png"
     },
     {
-      "src":"./img/icons/android-chrome-128x128.png",
+      "src":"./img/icons/icon-128x128.png",
       "sizes":"128x128","type":"image/png"
     },
     {
@@ -71,15 +71,15 @@
       "sizes":"57x57","type":"image/png"
     },
     {
-      "src":"./img/icons/apple-touch-icon-60x60.png",
+      "src":"./img/icons/apple-touch-icon-60x60-precomposed.png",
       "sizes":"60x60","type":"image/png"
     },
     {
-      "src":"./img/icons/apple-touch-icon-72x72.png",
+      "src":"./img/icons/icon-72x72.png",
       "sizes":"72x72","type":"image/png"
     },
     {
-      "src":"./img/icons/apple-touch-icon-76x76.png",
+      "src":"./img/icons/apple-touch-icon-76x76-precomposed.png",
       "sizes":"76x76","type":"image/png"
     },
     {
@@ -88,13 +88,13 @@
     },
 
     {
-      "src":"./img/icons/android-chrome-maskable-192x192.png",
+      "src":"./img/icons/icon-192x192.png",
       "sizes":"192x192",
       "type":"image/png",
       "purpose":"maskable"
     },
     {
-      "src":"./img/icons/android-chrome-maskable-512x512.png",
+      "src":"./img/icons/icon-512x512.png",
       "sizes":"512x512",
       "type":"image/png",
       "purpose":"maskable"
