--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,6 @@
 {"name":"greatbrain",
   "short_name":"greatbrain",
+  "theme_color":"#000",
   "icons":[
     {
       "src":"./img/icons/icon-192x192.png",
@@ -98,7 +99,7 @@
       "type":"image/png",
       "purpose":"maskable"
       }],
-      "start_url":"./index.html",
+      "start_url":"/",
       "display":"standalone",
       "background_color":"#000000"
 }
