--- a/public/manifest.json
+++ b/public/manifest.json
@@ -101,5 +101,5 @@
       }],
       "start_url":"/",
       "display":"standalone",
-      "background_color":"#000000"
+      "background_color":"rgb(173, 132, 102)"
 }
