--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "moment": "^2.29.3",
     "register-service-worker": "^1.7.2",
     "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
